--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of July 16, 2020"
+date: "Data as of July 20, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -37,6 +37,13 @@ cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442",
 file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 covid_data <- read_rds(paste0(file_path, "Output/covid_data_clean.rds"))
+   filter(symptom_onset_date >= "2020-06-01")
+
+mean(covid_data$number_contacts, na.rm = TRUE)
+median(covid_data$number_contacts, na.rm = TRUE)
+range(covid_data$number_contacts, na.rm = TRUE)
+
+table(covid_data$age_group, covid_data$number_contacts_categorical)
 ```
 
 
