--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -31,7 +31,7 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID data 7.22.20.xlsx"), 
+   read_xlsx(paste0(input_path, "COVID data 7.27.20.xlsx"), 
              range = "A2:Y500", 
                         col_names = c("case_id", "age", "gender", "race", 
                                       "ethnicity", "zipcode", "healthcare_worker",
@@ -164,7 +164,7 @@ covid_clean <- covid_data_initial %>%
           test_date_new = ymd(test_date_new),
           test_date_indicator = if_else(is.na(test_date),
                                                  "Date of symptom onset",
-                                                 "Tested: date of test result"),
+                                                 "Date of test result"),
           travel_hx = as.character(travel_hx),
           travel_hx = if_else(is.na(travel_hx), "Unknown", travel_hx),
           travel_hx = factor(travel_hx, levels = c("Yes", "No", "Unknown")),
